Refactored spring properties to use record configuration settings. Added session tests.